<resources>
    <string name="app_name">Animelist</string>
    <string name="all_content_is_taken_from_https_myanimelist_net">All content is taken from https://myanimelist.net/</string>
    <string name="sample_title">Sample Title</string>
    <string name="sample_genre">Genre</string>
    <string name="sample_type">Type</string>
    <string name="sample_score">Score</string>
    <string name="detail">Detail</string>
    <string name="title">Title</string>
    <string name="sample_episodes">Episodes</string>
    <string name="sample_status">Status</string>
    <string name="synopsis">Synopsis</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem Ipsum Dolor Sit Amet</string>
</resources>
