<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    android:padding="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_list_item"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription"
            />
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_list_title"
                android:text="@string/sample_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/sample_genre"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
                <TextView
                    android:id="@+id/txt_list_genre"
                    android:text="@string/sample_genre"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/sample_type"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
                <TextView
                    android:id="@+id/txt_list_type"
                    android:text="@string/sample_type"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/sample_score"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
                <TextView
                    android:id="@+id/txt_list_score"
                    android:text="@string/sample_score"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:background="@android:color/holo_red_light"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_detail"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/detail"
                    android:textColor="@android:color/white"
                    android:background="?attr/selectableItemBackground"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>